--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,134 @@
 /* Basic reset */
-body {
-    font-family: Arial, sans-serif;
-	margin: 0;
+
+* {
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+/* Body styles */
+body {
+    font-family: 'Montserrat', sans-serif;
+    line-height: 1.6;
+    background-color: #DEF9C4;
+    color:  #468585;
+    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}   
+
+/* Header styles */
+header {
+    background-color: #50B498;
+    color: #DEF9C4;
+    padding: 20px 0;
+    text-align: center;
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+}
+
+header:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(135deg, #DEF9C4, #50B498);
+    opacity: 0.8;
+    z-index: -1;
+}
+
+header h1 {
+    margin-bottom: 20px;
+    font-size: 3em;
+    font-weight: 900;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    text-shadow: 2px 2px 4px  rgba(0, 0, 0, 0.2);
+}
+
+nav {
+    margin-top: 20px;
+}
+
+nav ul {
+    list-style: none;
+    text-align: center;
+}
+
+nav ul li {
+    display: inline-block;
+    margin: 0 15px;
+}
+
+nav ul li a {
+    color: #DEF9C4;
+    text-decoration: none;
+    font-size: 1.2em;
+    transition: color 0.3s ease;
+}
+
+nav ul li a:hover {
+    color: #9CDBA6;
+}
+
+/* Main section styles */
+main {
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
+    gap: 30px;
+    justify-items: center;
+    width: 100%;
+    max-width: 1200px;
+}
+
+section {
+    padding: 40px;
+    background-color: #9cdba685;
+    border-radius: 20px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    width: 100%;
+    max-width: 500px;
+}
+
+section:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 12px 20px rgba(0, 0, 0, 0.1);
+}
+
+section h2 {
+    margin-bottom: 15px;
+    font-size: 1.5em;
+    color: #468585;
+}
+
+/* Footer styles */
+footer {
+    width: 100%;
+    text-align: center;
+    padding: 20px 0;
+    background-color: #50B498;
+    color: #DEF9C4;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
+}
+
+footer p {
+    margin-top: 0px;
+    font-size: 1em;
+}
+
+/* Responsive design */
+@media (max-width: 768px) {
+    main {
+        grid-template-columns: 1fr;
+    }
 }
